// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Texto snapshot (dois temas): claro 1`] = `
<Text
  maxFontSizeMultiplier={1.3}
  style={
    [
      {
        "fontFamily": "Inter-SemiBold",
        "fontSize": 20,
        "lineHeight": 26,
      },
      {
        "color": "#C7186B",
      },
      {},
      {
        "fontVariant": [
          "tabular-nums",
        ],
      },
    ]
  }
>
  R$ 1.234,56
</Text>
`;

exports[`Texto snapshot (dois temas): escuro 1`] = `
<Text
  maxFontSizeMultiplier={1.3}
  style={
    [
      {
        "fontFamily": "Inter-SemiBold",
        "fontSize": 20,
        "lineHeight": 26,
      },
      {
        "color": "#FF4FA0",
      },
      {},
      {
        "fontVariant": [
          "tabular-nums",
        ],
      },
    ]
  }
>
  R$ 1.234,56
</Text>
`;
